# homescreen

./: .gitignore  .gitmodules  .gitreview  .mailmap  README.md  homescreen.pro  meson.build
autobuild/linux/: autobuild
homescreen/: README.md  homescreen.pro  meson.build
homescreen/conf/: HomeScreen.service
homescreen/docs/: api-services-book.yml  homescreen-book.yml  homescreen_api.md  index.md
homescreen/qml/: Home.qml  IconItem.qml  MediaArea.qml  MediaAreaBlank.qml  MediaAreaMusic.qml  MediaAreaRadio.qml  ShortcutArea.qml  ShortcutIcon.qml  SpeechChrome.qml  StatusArea.qml  TopArea.qml  background.qml  background_demo.qml  background_with_panels.qml  bottompanel.qml  bottompanel_demo.qml  main.qml  qml.qrc  toppanel.qml  toppanel_demo.qml
homescreen/qml/images/: images.qrc
homescreen/qml/images/Home/: home.qrc
homescreen/qml/images/Shortcut/: shortcut.qrc
homescreen/qml/images/SpeechChrome/: speechchrome.qrc
homescreen/src/: aglsocketwrapper.cpp  aglsocketwrapper.h  appinfo.cpp  appinfo.h  applicationlauncher.cpp  applicationlauncher.h  applicationmodel.cpp  applicationmodel.h  chromecontroller.cpp  chromecontroller.h  constants.h  hmi-debug.h  homescreencontrolinterface.cpp  homescreencontrolinterface.h  homescreenhandler.cpp  homescreenhandler.h  layouthandler.cpp  layouthandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mastervolume.cpp  mastervolume.h  paclient.cpp  paclient.h  popupwidget.cpp  popupwidget.h  settingswidget.cpp  settingswidget.h  shell.cpp  shell.h  statusbarmodel.cpp  statusbarmodel.h  statusbarserver.cpp  statusbarserver.h
homescreensimulator/: homescreensimulator.pro
homescreensimulator/src/: main.cpp  mainwindow.cpp  mainwindow.h
interfaces/: appframework.xml  daynightmode.xml  homescreen.xml  inputevent.xml  interfaces.pro  popup.xml  proximity.xml  statusbar.xml  windowmanager.xml
interfaces/include/: daynightmode.hpp  homescreen.hpp  inputevent.hpp  popup.hpp  proximity.hpp  statusbar.hpp  windowmanager.hpp
interfaces/src/: windowmanager.cpp
package/: config.xml  package.pro
sampleapptimedate/: sampleapptimedate.pro
test/: commandlinetests.txt
